<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:srcCompat="@drawable/bestpanda" />

    <EditText
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        android:background="@drawable/my_background"
        android:hint="@string/hintsname"
        android:textColorHint="#000000"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:background="@drawable/my_background"
        android:hint="@string/hintspassword"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cb_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_background"
        android:checked="false"
        android:text="RememberMe" />

    <CheckBox
        android:id="@+id/cb_atuo_login"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_background"
        android:checked="false"
        android:text="AutoLogin" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:background="@drawable/my_background"
        android:text="@string/singup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:background="@drawable/my_background"
            android:text="@string/forget"
            android:textAlignment="center">

        </TextView>

        <TextView
            android:id="@+id/sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            android:textColor="#000000"
            android:background="@drawable/my_background"
            android:text="@string/signin"
            android:textAlignment="center">

        </TextView>

    </LinearLayout>

</LinearLayout>